--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "apollo-client": "^2.6.10",
+    "graphql": "^15.8.0",
     "hapi": "^18.1.0",
     "inert": "^5.1.3",
     "path": "^0.12.7",
