--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@fontsource/roboto": "^4.5.5",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.5.3",
+    "@mui/styled-engine-sc": "^5.5.2",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +21,10 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.2",
+    "storybook-addon-material-ui": "^0.9.0-alpha.24",
+    "styled-components": "^5.3.5",
     "three": "^0.139.1",
     "web-vitals": "^2.1.4"
   },
