--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.5.3",
     "@mui/styled-engine-sc": "^5.5.2",
+    "@react-three/fiber": "^8.0.8",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -25,7 +26,7 @@
     "semantic-ui-react": "^2.1.2",
     "storybook-addon-material-ui": "^0.9.0-alpha.24",
     "styled-components": "^5.3.5",
-    "three": "^0.139.1",
+    "three": "^0.139.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
