--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
     "storybook-addon-material-ui": "^0.9.0-alpha.24",
+    "storybook-color-picker": "^2.3.1",
     "styled-components": "^5.3.5",
     "three": "^0.139.2",
     "web-vitals": "^2.1.4"
