--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "semantic-ui-react": "^2.1.2",
     "storybook-addon-material-ui": "^0.9.0-alpha.24",
     "storybook-color-picker": "^2.3.1",
+    "stream": "^0.0.2",
     "styled-components": "^5.3.5",
     "three": "^0.139.2",
     "web-vitals": "^2.1.4"
