--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "graphql": "^15.8.0",
     "hapi": "^18.1.0",
+    "image-js": "^0.34.1",
     "inert": "^5.1.3",
     "path": "^0.12.7",
     "react": "^18.0.0",
