--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-tooltip": "^4.2.21",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
     "storybook-addon-material-ui": "^0.9.0-alpha.24",
