--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "storybook-color-picker": "^2.3.1",
     "styled-components": "^5.3.5",
     "three": "^0.139.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
