--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@storybook/react": "^6.4.20",
     "@storybook/testing-library": "^0.0.9",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.30.0",
     "husky": "^8.0.2",
     "webpack": "^5.71.0"
   },
